[gd_scene load_steps=2 format=3 uid="uid://b8s0davqkfwww"]

[ext_resource type="Script" uid="uid://p6qfcniqvlrs" path="res://addons/GodAgent/conversation_history_item.gd" id="1_item"]

[node name="ConversationHistoryItem" type="HBoxContainer"]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 31.0
grow_horizontal = 2
theme_override_constants/separation = 5
script = ExtResource("1_item")

[node name="ChatTitle" type="Button" parent="."]
layout_mode = 2
text = "Chat Name (2024-01-24)"
alignment = 0

[node name="DeleteBtn" type="Button" parent="."]
custom_minimum_size = Vector2(30, 0)
layout_mode = 2
tooltip_text = "Delete Chat"
text = "üóëÔ∏è"

[connection signal="pressed" from="ChatTitle" to="." method="_on_chat_title_pressed"]
[connection signal="pressed" from="DeleteBtn" to="." method="_on_delete_btn_pressed"]
